# MyProjectsCplusplus

./: List_operations_c++11.txt  List_sort.txt  Open_closed_principle.txt  single_Responsiblity.txt
c++_programs/: List_insert_delete.txt  README.md
mandelbrot/BitmapClass/: CMakeLists.txt  CMakePresets.json
mandelbrot/BitmapClass/include/: BitmapInfoHeader.h  Mandelbrot.h
mandelbrot/BitmapClass/src/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  Mandelbrot.cpp  main.cpp
